@@ -90,6 +90,11 @@ chart <- new(acmacs.Chart, raw_data)
   available.\cr \bold{rough} is boolean, when TRUE optimization is about
   30\% faster, result is slightly worse, visually no distinguishable.}
 
+  \item{relax_incremental(number_of_optimizations,\cr rough)}{relax
+  multiple times upon calling acmacs.merge.2(). Only points having NaN
+  coordinates (i.e. points found in the second source chart of the
+  merge) randomized.}
+
   \item{remove_layers()}{if chart is a merge, titers cannot be
     modified. if you want to change them anyway, you have to remove
     layers from the chart. merging resulting (flattened) chart with
