@@ -79,6 +79,7 @@ RCPP_MODULE(acmacs)
             .method("new_projection_with_layout", &Chart::new_projection_with_layout)
             .method("relax", &Chart::relax2)
             .method("relax", &Chart::relax3)
+            .method("relax_incremetal", &Chart::relax_incremetal)
             .method("relax_many", &Chart::relax_many, "generate maps multiple times from random starts\n\targuments:\n\tminimum column basis, e.g. \"none\", \"1280\"\n\tnumber of dimensions, e.g. 2\n\tnumber of optimizations, e.g. 10\n\tuse rough optimization (30% faster): TRUE or FALSE\n")
             .method("stress_evaluator", &Chart::stress_evaluator, "returns stress evaluator object for the distances constructed from the titers of this chart")
             .method("sort_projections", &Chart::sort_projections)
