@@ -173,7 +173,7 @@ Projection Chart::new_projection_with_layout(std::string minimum_column_basis, c
 Projection Chart::relax2(std::string minimum_column_basis, size_t number_of_dimensions)
 {
     auto [status, projection] = obj_->relax(minimum_column_basis, acmacs::number_of_dimensions_t{number_of_dimensions}, acmacs::chart::use_dimension_annealing::yes,
-                                            acmacs::chart::optimization_options(acmacs::chart::optimization_method::alglib_cg_pca, acmacs::chart::optimization_precision::fine, 1.0));
+                                            acmacs::chart::optimization_options(acmacs::chart::optimization_method::alglib_cg_pca, acmacs::chart::optimization_precision::fine, 2.0));
       // obj_->projections_modify()->sort();
     return projection;
 }
@@ -181,15 +181,23 @@ Projection Chart::relax2(std::string minimum_column_basis, size_t number_of_dime
 Projection Chart::relax3(std::string minimum_column_basis, size_t number_of_dimensions, bool rough)
 {
     auto [status, projection] = obj_->relax(minimum_column_basis, acmacs::number_of_dimensions_t{number_of_dimensions}, acmacs::chart::use_dimension_annealing::yes,
-                                            acmacs::chart::optimization_options(acmacs::chart::optimization_method::alglib_cg_pca, rough ? acmacs::chart::optimization_precision::rough : acmacs::chart::optimization_precision::fine, 1.0));
+                                            acmacs::chart::optimization_options(acmacs::chart::optimization_method::alglib_cg_pca, rough ? acmacs::chart::optimization_precision::rough : acmacs::chart::optimization_precision::fine, 2.0));
       // obj_->projections_modify()->sort();
     return projection;
 }
 
 void Chart::relax_many(std::string minimum_column_basis, size_t number_of_dimensions, size_t number_of_optimizations, bool rough)
 {
-    acmacs::chart::optimization_options options(acmacs::chart::optimization_method::alglib_cg_pca, rough ? acmacs::chart::optimization_precision::rough : acmacs::chart::optimization_precision::fine, 1.0);
+    acmacs::chart::optimization_options options(acmacs::chart::optimization_method::alglib_cg_pca, rough ? acmacs::chart::optimization_precision::rough : acmacs::chart::optimization_precision::fine, 2.0);
     obj_->relax(acmacs::chart::number_of_optimizations_t{number_of_optimizations}, minimum_column_basis, acmacs::number_of_dimensions_t{number_of_dimensions}, acmacs::chart::use_dimension_annealing::yes, options, acmacs::chart::report_stresses::no, acmacs::chart::PointIndexList{});
+    obj_->projections_modify()->sort();
+}
+
+void Chart::relax_incremetal(size_t number_of_optimizations, bool rough)
+{
+    acmacs::chart::optimization_options options(acmacs::chart::optimization_method::alglib_cg_pca, rough ? acmacs::chart::optimization_precision::rough : acmacs::chart::optimization_precision::fine, 2.0);
+    constexpr const size_t projection_no{0};
+    obj_->relax_incremetal(projection_no, acmacs::chart::number_of_optimizations_t{number_of_optimizations}, options);
     obj_->projections_modify()->sort();
 }
 
@@ -572,11 +580,12 @@ Chart merge_frozen(Chart chart1, Chart chart2)
 
 Chart merge_incremental(Chart chart1, Chart chart2, size_t number_of_optimizations, size_t num_threads)
 {
-    Rprintf("acmacs.merge_incremental deprecated! use acmacs.merge.2\n");
+    Rprintf("acmacs.merge_incremental deprecated! use acmacs.merge.2() followed by merge$relax_incremetal(number_of_optimizations)\n");
     auto result = merge(chart1, chart2, "a", 2);
     acmacs::chart::optimization_options options(acmacs::chart::optimization_method::alglib_cg_pca, acmacs::chart::optimization_precision::fine, 2.0);
     options.num_threads = num_threads;
-    result.obj_->relax_incremetal(0, acmacs::chart::number_of_optimizations_t{number_of_optimizations}, options);
+    constexpr const size_t projection_no{0};
+    result.obj_->relax_incremetal(projection_no, acmacs::chart::number_of_optimizations_t{number_of_optimizations}, options);
     return result;
 }
 
