@@ -2,6 +2,7 @@ acmacs.r NEWS -- history of user-visible changes.
 
 * Changes in 4.0 (2019-12-17)
 ** chart$new_projection_with_layout(minimum_column_basis, matrix(...)), columns of the matrix corresponds to the dimensions of the layout
+** chart$relax_incremental()
 ** chart$merge.1
 
 * Changes in 3.6 (2019-07-10)
